--- a/styles/components/TopSummary.css
+++ b/styles/components/TopSummary.css
@@ -74,9 +74,6 @@
   text-align: right;
 }
 
-.top-summary-labels {
-  padding: 0 24px;
-}
 
 .top-summary-chart {
   width: 100%;
